img and quotecard components

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,3 +2,5 @@ $black: #000;
 $white: #fff;
 $default-button-background: #d0dfe0;
 $rating-button-background: #81c3ba;
+$rating-button-outline: #86bcd1;
+$border-color: #a9b0b3;
