people view, quotes view

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,3 +4,4 @@ $default-button-background: #d0dfe0;
 $rating-button-background: #81c3ba;
 $rating-button-outline: #86bcd1;
 $border-color: #a9b0b3;
+$card-box-shadow: #b6b9bd;
