--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,4 @@
+// colors
 $black: #000;
 $white: #fff;
 $default-button-background: #d0dfe0;
@@ -5,3 +6,7 @@ $rating-button-background: #81c3ba;
 $rating-button-outline: #86bcd1;
 $border-color: #a9b0b3;
 $card-box-shadow: #b6b9bd;
+
+// other
+$box-shadow: 1px 1px 1px 0 $card-box-shadow;
+$card-padding: 12px;
