localstorage, rating button logic

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $white: #fff;
 $default-button-background: #d0dfe0;
 $rating-button-background: #81c3ba;
 $rating-button-outline: #86bcd1;
+$liked-button-red: #ec1919;
 $border-color: #a9b0b3;
 $card-box-shadow: #b6b9bd;
 
