--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,8 @@ $rating-button-outline: #86bcd1;
 $liked-button-red: #ec1919;
 $border-color: #a9b0b3;
 $card-box-shadow: #b6b9bd;
+$router-link: #2a2d2f;
+$router-link-active: #847777;
 
 // other
 $box-shadow: 1px 1px 1px 0 $card-box-shadow;
