--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,6 +10,7 @@ $card-box-shadow: #b6b9bd;
 $router-link: #2a2d2f;
 $router-link-active: #847777;
 $error-red: #e2a8a8;
+$header-color: #e6e5e6;
 
 // other
 $box-shadow: 1px 1px 1px 0 $card-box-shadow;
